autopwn v0.20.0 - 20150611

* Added load ability. Can now load
  target files while on the shell
* Fixed tab completion for unset
* Required field in 'show options' now shows
  whether current field or others required
* Modules can now be specified in targets file
* Bug fixes

autopwn v0.19.0 - 20150610

* Fixed buggy tab completion
* Added access to shell (e.g. ! ls OR shell ls)
* Added new tools
* 'show options' now shows user whether
  the option is required and example values
* Bug fixes

autopwn v0.18.0 - 20150609

* Tab completion

autopwn v0.17.0 - 20150601

* autopwn shell (similar to msfconsole)
* Code rewrite (slightly cleaner now)

autopwn v0.16.0 - 20150426

* Documentation work
* Code optimisations
  (966 SLOC to 926 SLOC
  in autopwn/__init__.py)
* Tool config changes
* Assessment config cleanup
* Bug fixes

autopwn v0.15.0 - 20150424

* Addded ability to specify ip address lists
* Modified ruleset code to allow for lists within
  lists for target-parameter-exists. This means
  that a user can specify that as long as *one*
  of the items in the list exists, then no
  rule violation occurred

autopwn v0.14.0 - 20150421

* Added cookie support to some tools

autopwn v0.13.0 - 20150421

* autopwn has been rewritten in python3

autopwn v0.12.0 - 20150420 (with thanks to berdario)

* This is the last version of autopwn which will be written
  in Python2. No new features will be written for autopwn
  on Python2, only bug fixes will be backported.
* autopwn can now be installed by pip
* Adopting semver (http://semver.org/)

autopwn v0.11 - 20150417

* Added experimental cookie support for tools. Currently
  only the arachni tool configuration has been updated
  to allow for cookie options

autopwn v0.10 - 20150415

* Added option to specify assessments directory
* Added parallel command line option (overrides
  all other parallel options specified)

autopwn v0.9.3 - 20150415

* Added timezone info to logs